Actualización de diseño
Se agregan diseños para dispositivos móviles y SEO

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<main  class="min-h-screen bg-white text-black dark:bg-gray-900 dark:text-white transition-colors duration-300">
+<main  class="min-h-screen bg-[var(--sand-light)] text-black dark:text-white transition-colors duration-300">
   <app-hero></app-hero>
   <section id="about" class="relative section-pattern">
     <app-about></app-about>
